[metadata]
name = heat-cfntools
summary = Tools required to be installed on Heat provisioned cloud instances
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    heat_cfntools
scripts =
    bin/cfn-create-aws-symlinks
    bin/cfn-get-metadata
    bin/cfn-hup
    bin/cfn-init
    bin/cfn-push-stats
    bin/cfn-signal

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
