[metadata]
name = heat-cfntools
summary = Tools required to be installed on Heat provisioned cloud instances
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    heat_cfntools
scripts =
    bin/cfn-create-aws-symlinks
    bin/cfn-get-metadata
    bin/cfn-hup
    bin/cfn-init
    bin/cfn-push-stats
    bin/cfn-signal
