[metadata]
name = heat-cfntools
summary = Tools required to be installed on Heat provisioned cloud instances
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/heat-cfntools/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[files]
packages =
    heat_cfntools
scripts =
    bin/cfn-create-aws-symlinks
    bin/cfn-get-metadata
    bin/cfn-hup
    bin/cfn-init
    bin/cfn-signal
